# shopping-list

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: postCreateCommand.sh  postStartCommand.sh
api/: graphql-schema.json  pyproject.toml
api/api/: permissions.py  schema.py  settings.py  urls.py
api/core/: admin.py  schema.py
api/core/migrations/: 0001_initial.py  0002_remove_store_team.py
api/core/models/: __init__.py  item.py  project.py  project_item.py  shopping_list.py  store.py  store_section.py
api/users/: admin.py  schema.py
api/users/migrations/: 0001_initial.py  0002_team_user_teams.py  0003_remove_user_teams_team_members.py
api/users/models/: team.py  user.py
app/: codegen.ts  package-lock.json  package.json
app/src/: App.vue  main.ts
app/src/components/: AppHeader.vue
app/src/gql/: functions.ts  gql.ts  graphql.ts  index.ts
app/src/router/: index.ts
app/src/stores/: auth.ts  users.ts
app/src/types/: shared.ts  user.ts
app/src/views/: HomeView.vue  SignoutView.vue
