[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Thalida Noel <thalida.c.noel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
pylint = "^2.17.0"
dj-database-url = "^1.2.0"
graphene-django = "^3.0.0"
pylint-django = "^2.5.3"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.14.0"
social-auth-app-django = "^5.1.0"
django-graphql-jwt = "^0.3.4"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
